add_subdirectory(m1_triangle)
add_subdirectory(m2_shader)
add_subdirectory(m3_texture)
add_subdirectory(m4_scenegraph)
add_subdirectory(m5_camera)
add_subdirectory(m6_height_map)
add_subdirectory(m7_displacement)
add_subdirectory(m8_tessellation)
add_subdirectory(m9_box2d)
add_subdirectory(m10_text)