add_subdirectory(com)
add_subdirectory(imgui)
add_subdirectory(test_imgui)
add_subdirectory(test_assimp)
add_subdirectory(1_triangle)
add_subdirectory(2_shader)
add_subdirectory(3_texture)
add_subdirectory(4_transform)
add_subdirectory(5_coordination)
add_subdirectory(6_camera)
add_subdirectory(7_light)
add_subdirectory(8_material)
add_subdirectory(9_lighting_maps)
add_subdirectory(10_light_caster)
add_subdirectory(11_multiple_lights)
add_subdirectory(12_model)
